--- a/app/build.gradle
+++ b/app/build.gradle
@@ -7,7 +7,7 @@ android {
     compileSdk 32
 
     defaultConfig {
-        applicationId "com.uc_bcf.edu.ph.touchsomegrass"
+        applicationId "com.grassyass.touchsomegrass"
         minSdk 21
         targetSdk 32
         versionCode 1
