--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -9,14 +9,13 @@
         android:fullBackupContent="@xml/backup_rules"
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
-        android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/Theme.TouchSomeGrass"
         tools:targetApi="31">
         <activity
             android:name=".activities.OnboardingActivity"
             android:exported="true"
-            android:label="@string/activity_onboarding_label">
+            android:theme="@style/Theme.TouchSomeGrass.NoActionBar" >
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
