Redesign Login Activity

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -25,11 +25,13 @@
         <activity
             android:name=".activities.LoginActivity"
             android:exported="false"
-            android:label="@string/activity_login_label" />
+            android:label="@string/activity_login_label"
+            android:theme="@style/Theme.TouchSomeGrass.NoActionBar" />
         <activity
             android:name=".activities.SignUpActivity"
             android:exported="false"
-            android:label="@string/activity_sign_up_label" />
+            android:label="@string/activity_sign_up_label"
+            android:theme="@style/Theme.TouchSomeGrass.NoActionBar" />
         <activity
             android:name=".activities.MainActivity"
             android:exported="false"
@@ -47,6 +49,10 @@
             android:name=".activities.SettingsActivity"
             android:exported="false"
             android:label="@string/activity_settings_label" />
+
+        <meta-data
+            android:name="preloaded_fonts"
+            android:resource="@array/preloaded_fonts" />
     </application>
 
 </manifest>
