--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -4,6 +4,9 @@
     package="com.grassyass.touchsomegrass">
 
     <uses-permission android:name="android.permission.ACTIVITY_RECOGNITION" />
+    <uses-permission android:name="android.permission.PACKAGE_USAGE_STATS"
+        tools:ignore="ProtectedPermissions" />
+    <uses-permission android:name="android.permission.SYSTEM_ALERT_WINDOW" />
 
     <application
         android:allowBackup="true"
@@ -14,6 +17,11 @@
         android:supportsRtl="true"
         android:theme="@style/Theme.TouchSomeGrass"
         tools:targetApi="31">
+        <service
+            android:name=".services.AppWatcherService"
+            android:enabled="true"
+            android:exported="false" />
+
         <activity
             android:name=".activities.OnboardingActivity"
             android:exported="true"
@@ -52,8 +60,7 @@
             android:name=".activities.AppLockActivity"
             android:exported="false"
             android:label="App Lock"
-            android:theme="@style/Theme.TouchSomeGrass.NoActionBar">
-        </activity>
+            android:theme="@style/Theme.TouchSomeGrass.NoActionBar" />
 
         <meta-data
             android:name="preloaded_fonts"
