--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -4,9 +4,11 @@
     package="com.grassyass.touchsomegrass">
 
     <uses-permission android:name="android.permission.ACTIVITY_RECOGNITION" />
-    <uses-permission android:name="android.permission.PACKAGE_USAGE_STATS"
+    <uses-permission
+        android:name="android.permission.PACKAGE_USAGE_STATS"
         tools:ignore="ProtectedPermissions" />
     <uses-permission android:name="android.permission.SYSTEM_ALERT_WINDOW" />
+    <uses-permission android:name="android.permission.FOREGROUND_SERVICE" />
 
     <application
         android:allowBackup="true"
@@ -17,6 +19,11 @@
         android:supportsRtl="true"
         android:theme="@style/Theme.TouchSomeGrass"
         tools:targetApi="31">
+
+        <service
+            android:name=".services.ActivityWatcherService"
+            android:enabled="true"
+            android:exported="false" />
         <service
             android:name=".services.AppWatcherService"
             android:enabled="true"
