Add feature to follow friends

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -67,8 +67,13 @@
             android:name=".activities.AppLockActivity"
             android:exported="false"
             android:label="App Lock"
-            android:theme="@style/Theme.TouchSomeGrass.NoActionBar"
-            android:noHistory="true"/>
+            android:noHistory="true"
+            android:theme="@style/Theme.TouchSomeGrass.NoActionBar" />
+
+        <activity
+            android:name=".activities.FriendSearchActivity"
+            android:exported="false"
+            android:label="Find Friends" />
 
         <meta-data
             android:name="preloaded_fonts"
