--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -19,6 +19,10 @@
         android:supportsRtl="true"
         android:theme="@style/Theme.TouchSomeGrass"
         tools:targetApi="31">
+        <activity
+            android:name=".activities.ExpHelpActivity"
+            android:label="Help"
+            android:exported="false" />
 
         <service
             android:name=".services.ActivityWatcherService"
@@ -69,7 +73,6 @@
             android:label="App Lock"
             android:noHistory="true"
             android:theme="@style/Theme.TouchSomeGrass.NoActionBar" />
-
         <activity
             android:name=".activities.FriendSearchActivity"
             android:exported="false"
